package evaluator.exception;

public class DuplicateIntrebareException extends Exception {

	public DuplicateIntrebareException(String message) {
		super(message);
	}

}
