package evaluator.exception;

public class InputValidationFailedException extends Exception {

	public InputValidationFailedException(String message){
		super(message);
	}

}
