package evaluator.exception;

public class NotAbleToCreateStatisticsException extends Exception {

	public NotAbleToCreateStatisticsException(String message) {
		super(message);
	}

}
