package evaluator.exception;

public class NotAbleToCreateTestException extends Exception {

	public NotAbleToCreateTestException(String message) {
		super(message);
	}

}
