@startuml

title __PROIECTEVALUATOREXAMEN's Class Diagram__\n

  package evaluator {
    package evaluator.exception {
      class DuplicateIntrebareException {
      }
    }
  }
  

  package evaluator {
    package evaluator.util {
      class InputValidation {
      }
    }
  }
  

  package evaluator {
    package evaluator.exception {
      class InputValidationFailedException {
      }
    }
  }
  

  package evaluator {
    package evaluator.model {
      class Intrebare {
      }
    }
  }
  

  package evaluator {
    package evaluator.repository {
      class IntrebariRepository {
      }
    }
  }
  

  package evaluator {
    package evaluator.exception {
      class NotAbleToCreateStatisticsException {
      }
    }
  }
  

  package evaluator {
    package evaluator.exception {
      class NotAbleToCreateTestException {
      }
    }
  }
  

  package evaluator {
    package evaluator.service {
      class Service {
      }
    }
  }
  

  package evaluator {
    class StartApp {
    }
  }
  

  package evaluator {
    package evaluator.model {
      class Statistica {
      }
    }
  }
  

  package evaluator {
    package evaluator.model {
      class Test {
      }
    }
  }
  

  package evaluator {
    package evaluator.ui {
      class UI {
      }
    }
  }
  

  Service o-- IntrebariRepository : intrebariRepository
  UI o-- Service : controller


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
